--- a/productosEstrella/src/app/app.component.css
+++ b/productosEstrella/src/app/app.component.css
@@ -3,19 +3,17 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .navBar {
-  width: calc(100% - 30px);
-  height: calc(20% - 30px);
-  padding: 15px;
-  display: flex;
-  background-color: red;
+  width: 100%;
+  height: 10%;
 }
 
 .page {
   width: 100%;
-  height: 80%;
+  height: 90%;
   display: flex;
   flex-direction: row;
 }
@@ -23,18 +21,29 @@
 .filtros {
   width: 20%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  background-color: blue;
 }
 
 .productos {
-  width: 80%;
+  width: calc(80% - 40px);
   height: calc(100% - 40px);
   display: flex;
-  padding: 20px 0;
+  padding: 20px;
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
   gap: 20px;
+  flex-wrap: wrap;
+  overflow-y: auto;
+}
+
+::-webkit-scrollbar {
+  width: 10px; 
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888; 
+  border-radius: 5px;  
+}
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1; 
 }
