--- a/productosEstrella/src/app/info-card/info-card.component.css
+++ b/productosEstrella/src/app/info-card/info-card.component.css
@@ -1,10 +1,19 @@
 .principalContainer {
-  width: calc(100% - 40px);
-  height: 340px;
+  width: calc((100% - 40px));
+  height: 280px;
   padding: 20px;
   display: flex;
   flex-direction: column;
   background-color: #EAE9E9;
+  border-radius: 15px;
+  gap: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.principalContainer:hover {
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  transition: all 0.4s ease-in-out;
 }
 
 .imgContainer {
@@ -14,15 +23,45 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  border-radius: 15px;
 }
 
 .fileImg {
-  width: 100%;
-  height: 100%;
+  width: calc(100% - 20px);
+  height: calc(100% - 20px);
+  padding: 10px;
   object-fit: cover;
 }
 
 .preInfoContainer {
   width: 100%;
   height: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+p {
+  margin: 0;
+  padding: 0;
+}
+
+.name {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.price {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.category {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 18px;
+  font-weight: normal;
+  color: #1C61C9;
 }
