--- a/productosEstrella/src/app/app.component.html
+++ b/productosEstrella/src/app/app.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="productos">
       @for (i of array; track i) {
-        <app-info-card />
+        <app-info-card (click) = "onClick()"></app-info-card>
       }
     </div>
   </div>
