--- a/productosEstrella/src/app/info-card/info-card.component.css
+++ b/productosEstrella/src/app/info-card/info-card.component.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   background-color: #EAE9E9;
+  background-size: cover;
   border-radius: 15px;
   gap: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -31,6 +32,7 @@
   height: calc(100% - 20px);
   padding: 10px;
   object-fit: cover;
+  border-radius: 15px;
 }
 
 .preInfoContainer {
@@ -40,6 +42,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  overflow-y: hidden;
 }
 
 p {
@@ -48,54 +51,80 @@ p {
 }
 
 .name {
+  text-align: center;
   font-family: "Josefin Sans", sans-serif;
-  font-size: 24px;
+  font-size: 18px;
   font-weight: bold;
+  height: 50%;
+  overflow-y: auto;
 }
 
 .price {
+  text-align: center;
   font-family: "Josefin Sans", sans-serif;
-  font-size: 20px;
+  font-size: 14px;
   font-weight: bold;
 }
 
 .category {
+  text-align: center;
   font-family: "Josefin Sans", sans-serif;
-  font-size: 18px;
+  font-size: 12px;
   font-weight: normal;
   color: #1C61C9;
 }
 
 .fondoContainer {
-  width: 100%;
-  height: 100%;
+  width: calc(100% - 10px);
+  height: calc(100% - 10px);
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-direction: column;
+  background-color: rgba(198, 198, 198, 0.75);
+  border-radius: 15px;
+  gap: 10px;
+  padding: 5px;
 }
 
 .titleClicked {
+  text-align: center;
   font-family: "Josefin Sans", sans-serif;
-  font-size: 28px;
+  font-size: 22px;
   font-weight: bold;
+  overflow-y: auto;
+  height: 30%;
+}
+
+.titleClicked::-webkit-scrollbar {
+  display: none;
 }
 
 .priceClicked {
+  text-align: center;
   font-family: "Josefin Sans", sans-serif;
-  font-size: 22px;
+  font-size: 16px;
   font-weight: bold;
 }
 
 .infoClicked {
+  text-align: center;
   font-family: "Josefin Sans", sans-serif;
-  font-size: 18px;
+  font-size: 12px;
   font-weight: normal;
+  overflow-y: auto;
+  height: 60%;
+}
+
+.infoClicked::-webkit-scrollbar {
+  display: none;
 }
 
 .categoryClicked {
+  text-align: center;
   font-family: "Josefin Sans", sans-serif;
-  font-size: 18px;
+  font-size: 12px;
   font-weight: normal;
   color: #1C61C9;
+  height: 10%;
 }
