--- a/productosEstrella/src/styles.css
+++ b/productosEstrella/src/styles.css
@@ -17,3 +17,15 @@ body {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+::-webkit-scrollbar {
+  width: 10px; 
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888; 
+  border-radius: 5px;  
+}
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1; 
+}
